Add default JVM options to launcher